--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/view": "^6.34.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@monaco-editor/react": "^4.6.0",
     "@rainbow-me/rainbowkit": "^1.3.7",
     "clsx": "^2.1.0",
+    "codemirror": "^5.65.18",
+    "monaco-editor": "^0.52.0",
     "react": "^18.2.0",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "viem": "^1.21.4",
@@ -22,6 +27,8 @@
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
+    "@types/codemirror": "^5.60.15",
+    "@types/node": "^22.8.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
